# fivenines_agent

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.alpine  Dockerfile.alpine-arm  Dockerfile.arm  Dockerfile.arm32  Dockerfile.synology  FN-Security-Findings.md  Makefile  README.md  SECURITY.md  TODOS.md  client.py  five-nines-client.service  fivenines-agent.openrc  fivenines-agent.service  fivenines_common.sh  fivenines_script.sh  fivenines_setup.ps1  fivenines_setup.sh  fivenines_setup_user.sh  fivenines_uninstall.ps1  fivenines_uninstall.sh  fivenines_uninstall_user.sh  fivenines_update.ps1  fivenines_update.sh  fivenines_update_user.sh  py2exe.sh  py2exe_alpine.sh  py2exe_arm.sh  py2exe_entrypoint.py  py2exe_synology.sh  py2exe_windows.ps1  pyproject.toml  requirements.txt  setup.old.sh  setup.sh  update.sh
.github/workflows/: build-release.yml  windows.yml
ci/: build-scripts.sh  mock_api_server.py  test-distro.sh  test-selinux-vm.sh
docs/: install-windows.md  windows-backend-handoff.md  windows-server-support-plan.md
five_nines_agent/: __main__.py  agent.py  cpu.py  disks.py  ip.py
fivenines_agent/: __main__.py  agent.py  apache.py  cache.py  caddy.py  ceph.py  cgroup.py  cli.py  collectors.py  config_schema.py  cpu.py  debug.py  disk_health.py  disk_health_windows.py  disk_smart.py  disks.py  dns_resolver.py  docker.py  env.py  fail2ban.py  fans.py  files.py  gpu.py  io.py  ip.py  kvm.py  libvirt.py  libvirt_kvm.py  load_average.py  log_capture.py  log_uploader.py  logs.py  machine_id.py  main.py  memory.py  mqtt.py  mysql.py  network.py  nginx.py  nvme_health.py  (+24 more)
selinux/: fivenines_agent.fc  fivenines_agent.te  fivenines_agent_docker.te  fivenines_agent_libvirt.te
synology/: INFO.template  README.md  build_spk.sh  gen_icons.py
synology/WIZARD_UIFILES/: install_uifile
synology/conf/: logrotate.conf
synology/scripts/: postinst  postuninst  postupgrade  preinst  preuninst  preupgrade  start-stop-status
tests/: test_agent_capability_reasons.py  test_agent_capture.py  test_agent_dry_run.py  test_agent_recheck.py  test_agent_security_scan.py  test_agent_signals.py  test_agent_telemetry.py  test_agent_watchdog.py  test_apache.py  test_cache.py  test_ceph.py  test_cgroup.py  test_collectors.py  test_config_schema.py  test_cpu.py  test_disk_health_windows.py  test_docker.py  test_env.py  test_files.py  test_gpu.py  test_ip.py  test_log_capture.py  test_log_signals.py  test_log_uploader.py  test_logs.py  test_logs_transport.py  test_machine_id.py  test_mqtt.py  test_mysql.py  test_network.py  test_packages.py  test_partitions.py  test_permissions_gpu.py  test_permissions_journald.py  test_permissions_packages.py  test_permissions_probe.py  test_permissions_recheck.py  test_permissions_systemd.py  test_php_fpm.py  test_ping.py  (+15 more)
tests/fixtures/: apache_contract_payload.json  ceph_contract_payload.json  docker_contract_payload.json  mqtt_contract_payload.json  network_contract_payload.json  php_fpm_contract_payload.json  proxmox_contract_payload.json  redis_contract_payload.json  zfs_contract_payload.json
windows/installer/: CreateServiceAccount.ps1  DelegateWmiStorageNamespace.ps1  Product.wxs  README.md  SetTokenFileAcl.ps1
windows/winsw/: README.md  fivenines-agent.xml
