[tool.poetry]
name = "fivenines_agent"
version = "1.3.5"
description = ""
authors = ["Sébastien Puyet <sebastien@fivenines.io>"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
python-dotenv = "^0.20.0"
psutil = "^5.9.8"
systemd-watchdog = "^0.9.0"
certifi = "^2024.12.14"
docker = "^7.1.0"
dnspython = "^2.7"
libvirt-python = "^11.6.0"
proxmoxer = "^2.1.0"

[tool.poetry.scripts]
fivenines_agent = "fivenines_agent.__main__:start"

[tool.poetry.group.dev.dependencies]
poetry-plugin-export = "^1.9.0"
pyinstaller = "^6.11.1"
virtualenv = ">=20.33.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
