[tool.poetry]
name = "fivenines_agent"
version = "1.10.0"
description = ""
authors = ["Sebastien Puyet <sebastien@fivenines.io>"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
python-dotenv = "^1.2.2"
psutil = "^7.2.1"
certifi = "^2024.12.14"
docker = "^7.1.0"
dnspython = "^2.7"
requests = "^2.33.0"
# Pure-Python PostgreSQL driver for the postgresql collector. Chosen over
# psycopg (C extension + libpq) because it bundles into the PyInstaller binary
# on both glibc and musl with no shared-library handling. Pulls scramp +
# python-dateutil transitively (locked in poetry.lock, no security floor).
pg8000 = "^1.31.5"
# Security floor: GHSA-pq67-6m6q-mj2v (decompression bomb), GHSA-48p4-8xcf-vxj5 (header leak across origins). Brought in transitively by requests/docker; pinned here so future lock regenerations cannot drop below the patched line.
urllib3 = "^2.7.0"

[tool.poetry.group.virtualization]
optional = true

[tool.poetry.group.virtualization.dependencies]
systemd-watchdog = "^0.9.0"
libvirt-python = "^11.6.0"
proxmoxer = "^2.1.0"
pynvml = "^12.0.0"

[tool.poetry.group.windows]
optional = true

[tool.poetry.group.windows.dependencies]
# Windows-only dependencies. The Windows PyInstaller build (py2exe_windows.ps1)
# pulls this group via --with windows and explicitly excludes the
# virtualization group, which carries libvirt-python (does not build on
# Windows) and systemd-watchdog (Linux-only).
#
# The sys_platform == "win32" marker is belt-and-suspenders: even though
# this group is optional, Poetry's lockfile resolution can still pull
# pywin32 into the dep tree on Linux when the resolver evaluates the
# windows group's edges. The marker makes the package non-applicable on
# Linux/macOS regardless of group install state, so 'poetry install' on
# Linux never tries to fetch the Windows-only wheel.
pywin32 = { version = "*", markers = "sys_platform == 'win32'" }
wmi = { version = "*", markers = "sys_platform == 'win32'" }

[tool.poetry.scripts]
fivenines_agent = "fivenines_agent.__main__:start"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.3"
pytest-cov = "^7.0.0"

[tool.poetry.group.dev.dependencies]
poetry-plugin-export = "^1.9.0"
pyinstaller = "^6.11.1"
virtualenv = ">=20.33.0"
# Security floors for transitive dev deps. Brought in by poetry/keyring/secretstorage. Pinned here so poetry lock cannot resolve below the patched line.
poetry = "^2.3.4"  # GHSA-4xc9-8hv6-g4j4 (wheel traversal), GHSA-9q47-jr9w-2qhc (tar traversal)
cryptography = "^48.0.1"  # GHSA-79v4-65xg-pq4g (subgroup attack), GHSA-h4gh-qq45-vh27 (DNS name constraints)

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
